# reuso-de-software-2024.1

course-manager/: README.MD
course-manager/course-manager-api/: .env.example  pyproject.toml
course-manager/course-manager-api/alembic/: env.py
course-manager/course-manager-api/alembic/versions/: 25c802a08a9c_create_table_courses.py
course-manager/course-manager-api/app/: models_db.py  utils.py
course-manager/course-manager-api/app/api/: deps.py  main.py  response.py
course-manager/course-manager-api/app/api/errors/: course.py  globals.py
course-manager/course-manager-api/app/api/models/: course.py
course-manager/course-manager-api/app/api/routers/: courses.py
course-manager/course-manager-api/app/core/: config.py  db.py
course-manager/course-manager-app/: index.html  package-lock.json  package.json
course-manager/course-manager-app/src/: App.tsx  main.tsx
course-manager/course-manager-app/src/api/: index.ts
course-manager/course-manager-app/src/components/course/: course-form-dialog.tsx  course-form.tsx  course-table.tsx
padrao-adapter/: README.md  package-lock.json  package.json
padrao-adapter/src/: server.ts
padrao-adapter/src/adpaters/: user-repository-dpater.ts
padrao-adapter/src/clients/: prisma-client-orm.ts
padrao-adapter/src/repositories/: user-repository-in-memory.ts  user-respository-prisma.ts  user-respository.ts
restaurant-lib/: Cargo.toml
restaurant-lib/src/: back_of_house.rs  lib.rs
restaurant-lib/src/front_of_house/: hosting.rs
restaurent-use/: Cargo.toml
restaurent-use/src/: main.rs
(+3 files in other folders)
